--- a/packages/client/src/modules/formValidation/locales/ru/translations.json
+++ b/packages/client/src/modules/formValidation/locales/ru/translations.json
@@ -4,8 +4,8 @@
   "maxLength": "Должно содержать мееньше чем {{ max }} символов",
   "minLength": "Должно содержать больше чем {{ min }} символов",
   "number": "Дожно быть числом",
-  "minValue": "Должно быть покрайне-мере {{ min }}",
+  "minValue": "Должно быть по крайней-мере {{ min }}",
   "email": "Почта не действительна",
   "alphaNumeric": "Только алфавитно-цифровые символы",
-  "phoneNumber": "Не действительно номер телефона, должно быть 10 цыфер"
+  "phoneNumber": "Не действительный номер телефона, номер должен содержать 10 цифр"
 }
