--- a/packages/common/modules/validation/locales/ru/translations.json
+++ b/packages/common/modules/validation/locales/ru/translations.json
@@ -1,11 +1,11 @@
 {
   "required": "Обязательное поле",
   "match": "Должно соотвествовать '{{ comparableField }}'",
-  "maxLength": "Должно содержать мееньше чем {{ max }} символов",
-  "minLength": "Должно содержать больше чем {{ min }} символов",
+  "maxLength": "Должно содержать менee {{ max }} символов",
+  "minLength": "Должно содержать болee {{ min }} символов",
   "number": "Дожно быть числом",
-  "minValue": "Должно быть по крайней-мере {{ min }}",
-  "email": "Почта не действительна",
-  "alphaNumeric": "Только алфавитно-цифровые символы",
-  "phoneNumber": "Не действительный номер телефона, номер должен содержать 10 цифр"
+  "minValue": "Должно содержать не менее {{ min }} символов",
+  "email": "Некорректный адрес почты",
+  "alphaNumeric": "Используйте только буквенно-цифровые символы",
+  "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр"
 }
