--- a/packages/common/modules/validation/locales/ru/translations.json
+++ b/packages/common/modules/validation/locales/ru/translations.json
@@ -4,6 +4,7 @@
   "maxLength": "Должно содержать менee {{ max }} символов",
   "minLength": "Должно содержать болee {{ min }} символов",
   "number": "Дожно быть числом",
+  "string": "Дожно быть строкой",
   "minValue": "Должно содержать не менее {{ min }} символов",
   "email": "Некорректный адрес почты",
   "alphaNumeric": "Используйте только буквенно-цифровые символы",
