Implement handling of server errors

--- a/packages/client/src/modules/contact/locales/ru/translations.json
+++ b/packages/client/src/modules/contact/locales/ru/translations.json
@@ -14,6 +14,6 @@
   "modal": {
     "btnMsg": "ОК"
   },
-  "errorMsg": "Не удалось отправить форму обратной связи! Повторите попытку позже.",
+  "serverError": "Не удалось отправить форму обратной связи! Повторите попытку позже.",
   "successMsg": "Благодарим Вас за обращение к нам!"
 }
