--- a/packages/client/src/modules/contact/locales/en/translations.json
+++ b/packages/client/src/modules/contact/locales/en/translations.json
@@ -14,6 +14,6 @@
   "modal": {
     "btnMsg": "OK"
   },
-  "errorMsg": "Contact request failed! Try again later.",
+  "serverError": "Contact request failed! Try again later.",
   "successMsg": "Thank you for contacting us!"
 }
