--- a/modules/contact/client-react/locales/en/translations.json
+++ b/modules/contact/client-react/locales/en/translations.json
@@ -14,6 +14,6 @@
   "modal": {
     "btnMsg": "OK"
   },
-  "errorMsg": "Contact request failed! Try again later.",
+  "serverError": "Contact request failed! Try again later.",
   "successMsg": "Thank you for contacting us!"
 }
