--- a/modules/contact/client-react/locales/ru/translations.json
+++ b/modules/contact/client-react/locales/ru/translations.json
@@ -14,6 +14,6 @@
   "modal": {
     "btnMsg": "ОК"
   },
-  "errorMsg": "Не удалось отправить форму обратной связи! Повторите попытку позже.",
+  "serverError": "Не удалось отправить форму обратной связи! Повторите попытку позже.",
   "successMsg": "Благодарим Вас за обращение к нам!"
 }
