--- a/packages/client/src/modules/user/locales/ru/translations.json
+++ b/packages/client/src/modules/user/locales/ru/translations.json
@@ -49,6 +49,7 @@
 
   "profile": {
     "title": "Профиль",
+    "logoutFAD": "Выйти со всех устройств",
     "headerText": "Информация о профиле",
     "meta": "Пример страницы с профилем",
     "loadMsg": "Загрузка...",
