Fix error on logout
Fixes: #925

--- a/packages/client/src/modules/user/locales/en/translations.json
+++ b/packages/client/src/modules/user/locales/en/translations.json
@@ -1,7 +1,7 @@
 {
   "navLink": {
     "users": "Users",
-    "sign": "Sign In",
+    "signIn": "Sign In",
     "logout": "Logout",
     "profile": "Profile",
     "editProfile": "Edit profile",
