Delete all console.log Add HOC withSubmit for containers user module with form Rename key with Err Message

--- a/modules/user/client-react/locales/en/translations.json
+++ b/modules/user/client-react/locales/en/translations.json
@@ -129,6 +129,9 @@
     },
     "btnBack": "Back"
   },
+  "userAdd": {
+    "errorMsg": "Add user failed!"
+  },
 
   "users": {
     "title": "Users",
