--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -127,6 +127,9 @@
     },
     "btnBack": "Назад"
   },
+  "userAdd": {
+    "errorMsg": "Не удалось добавить пользователя!"
+  },
 
   "users": {
     "title": "Список пользователей",
