Implement notify messages when download file

--- a/modules/upload/client-react/locales/en/translations.json
+++ b/modules/upload/client-react/locales/en/translations.json
@@ -10,5 +10,12 @@
     },
     "btnDel": "Delete"
   },
-  "btnUpload": "Upload"
+  "download": {
+    "successMsg": "The file was downloaded to the album",
+    "errorMsg": "Access error!"
+  },
+  "upload": {
+    "btn": "Upload",
+    "errorMsg": "This file type is not supported"
+  }
 }
