--- a/modules/upload/client-react/locales/ru/translations.json
+++ b/modules/upload/client-react/locales/ru/translations.json
@@ -10,5 +10,12 @@
     },
     "btnDel": "Удалить"
   },
-  "btnUpload": "Загрузить"
+  "download": {
+    "successMsg": "Файл загружен в альбом",
+    "errorMsg": "Ошибка! Не удалось скачать файл"
+  },
+  "upload": {
+    "btn": "Загрузить",
+    "errorMsg": "Данный тип файла не поддерживается"
+  }
 }
