--- a/modules/upload/client-react/locales/ru/translations.json
+++ b/modules/upload/client-react/locales/ru/translations.json
@@ -11,7 +11,7 @@
     "btnDel": "Удалить"
   },
   "download": {
-    "successMsg": "Файл загружен в альбом",
+    "successMsg": "Файл загружен в галерею",
     "errorMsg": "Ошибка! Не удалось скачать файл"
   },
   "upload": {
