--- a/modules/upload/client-react/locales/ru/translations.json
+++ b/modules/upload/client-react/locales/ru/translations.json
@@ -16,6 +16,9 @@
   },
   "upload": {
     "btn": "Загрузить",
-    "errorMsg": "Данный тип файла не поддерживается"
+    "errorMsg": "Данный тип файла не поддерживается",
+    "media": "Загрузить из медиа",
+    "documents": "Загрузить из документов",
+    "cancel": "Отменить"
   }
 }
