Create Waiting page for email confirmation

--- a/modules/user/client-react/locales/en/translations.json
+++ b/modules/user/client-react/locales/en/translations.json
@@ -180,6 +180,7 @@
         "placeholder": "Type Your Password"
       }
     },
-    "logout": "Log out"
+    "logout": "Log out",
+    "waiting": "Activation"
   }
 }
