--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -178,6 +178,7 @@
         "placeholder": "Введите пароль"
       }
     },
-    "logout": "Выйти"
+    "logout": "Выйти",
+    "waiting": "Активация"
   }
 }
