-Add server-ts im module -Update demo report in front

--- a/modules/reports/client-react/locales/en/translations.json
+++ b/modules/reports/client-react/locales/en/translations.json
@@ -1,4 +1,10 @@
 {
   "navLink": "Reports",
-  "title": "Reports PDF"
+  "title": "Reports PDF",
+  "list": {
+    "title": {
+      "front": "Report front",
+      "server": "Report server"
+    }
+  }
 }
