--- a/modules/reports/client-react/locales/ru/translations.json
+++ b/modules/reports/client-react/locales/ru/translations.json
@@ -1,4 +1,10 @@
 {
   "navLink": "Репорты",
-  "title": "Репорты в пдф"
+  "title": "Репорты в пдф",
+  "list": {
+    "title": {
+      "front": "Репорт с фронта",
+      "server": "Репорт с сервера"
+    }
+  }
 }
