Implementation of email conformation in a web application is the same as in a mobile application

--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -178,7 +178,7 @@
         "placeholder": "Введите пароль"
       }
     },
-    "logout": "Выйти",
-    "waiting": "Активация"
-  }
+    "logout": "Выйти"
+  },
+  "activateUser": "Активация"
 }
