--- a/modules/user/client-react/locales/en/translations.json
+++ b/modules/user/client-react/locales/en/translations.json
@@ -180,7 +180,7 @@
         "placeholder": "Type Your Password"
       }
     },
-    "logout": "Log out",
-    "waiting": "Activation"
-  }
+    "logout": "Log out"
+  },
+  "activateUser": "Activation"
 }
