--- a/modules/chat/server-ts/locales/ru/translations.json
+++ b/modules/chat/server-ts/locales/ru/translations.json
@@ -1,4 +1,4 @@
 {
-  "fileNotDeleted": "Наудалось удалить фаил.",
+  "fileNotDeleted": "Не удалось удалить файл.",
   "messageNotAdded": "Не удалось добавить сообщение с файлом."
 }
