--- a/modules/counter/client-react/locales/en/translations.json
+++ b/modules/counter/client-react/locales/en/translations.json
@@ -1,5 +1,5 @@
 {
   "title": "Counter",
-  "meta": "Counter example page",
+  "meta": "A page example with a counter",
   "loading": "Loading..."
 }
