--- a/modules/payments/client-react/stripe/subscription/locales/ru/translations.json
+++ b/modules/payments/client-react/stripe/subscription/locales/ru/translations.json
@@ -24,7 +24,7 @@
   "add": {
     "title": "Подписаться",
     "btn": "Подписаться",
-    "description": "Здесь вы можете увидеть базовый пример реализации подписки с помощью Stripe в реальном веб-приложении. Кроме того, в starter kit реализована функциональность для эмуляции реального платежного сервиса и для режима разработки.",
+    "description": "Apollo Universal Starter Kit включает пример реализации подписки с помощью Stripe. Кроме того, в starter kit реализована функциональность для эмуляции реального платежного сервиса и для режима разработки.",
     "product": "Чтобы получить секретное магическое число, вам следует подписаться.",
     "price": "Цена подписки в месяц ($):",
     "creditCard": "Кредитная карта",
