--- a/modules/upload/client-react/locales/ru/translations.json
+++ b/modules/upload/client-react/locales/ru/translations.json
@@ -2,7 +2,7 @@
   "navLink": "Загрузка",
   "title": "Загрузка",
   "meta": "Пример страницы с загрузкой",
-  "message": "Попробуйте перетащить файлы сюда или нажмите, чтобы выбрать файлы для загрузки.",
+  "message": "Перетащите файлы сюда или кликните, чтобы выбрать файлы для загрузки.",
   "table": {
     "column": {
       "name": "Имя файла",
@@ -10,5 +10,5 @@
     },
     "btnDel": "Удалить"
   },
-  "nativeMock": "Привет Загрузка!"
+  "nativeMock": "Привет, Загрузка!"
 }
