--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -12,7 +12,7 @@
   },
   "forgotPass": {
     "title": "Забыли пароль",
-    "meta": "Пример страницы забыли пароль",
+    "meta": "Пример страницы Забыли пароль?",
     "errorMsg": "Сброс пароля не выполнен!",
     "form": {
       "title": "Сброс пароля",
@@ -35,7 +35,7 @@
     "form": {
       "title": "Вход в систему",
       "field": {
-        "usernameOrEmail": "Имя пользователя или email",
+        "usernameOrEmail": "Имя пользователя или эл.почта",
         "pass": "Пароль"
       },
       "btnSubmit": "Войти"
@@ -86,7 +86,7 @@
     "meta": "Пример страницы со сбросом пароля",
     "errorMsg": "Сброс пароля не выполнен!",
     "form": {
-      "title": "Сброс пароля!",
+      "title": "Сброс пароля",
       "field": {
         "pass": "Пароля",
         "passConf": "Подтверждение пароля"
@@ -171,7 +171,7 @@
     "login": {
       "usernameOrEmail": {
         "label": "Имя пользователя или email",
-        "placeholder": "Введите имя пользователя или email"
+        "placeholder": "Введите имя пользователя или эл.почту"
       },
       "pass": {
         "label": "Пароль",
