--- a/modules/chat/server-ts/locales/en/translations.json
+++ b/modules/chat/server-ts/locales/en/translations.json
@@ -1,4 +1,4 @@
 {
-  "fileNotDeleted": "Unable to delete file.",
-  "messageNotAdded": "Unable to add message with file."
+  "fileNotDeleted": "Unable to delete the file.",
+  "messageNotAdded": "Unable to add a message with a file."
 }
