--- a/modules/counter/client-react/reduxCounter/locales/en/translations.json
+++ b/modules/counter/client-react/reduxCounter/locales/en/translations.json
@@ -1,4 +1,4 @@
 {
-    "text": "Current reduxCount, is {{reduxCount}}. This is being stored client-side with Redux.",
-    "btnLabel": "Click to increase reduxCount"
+    "text": "This counter value is {{reduxCount}}. It's stored on the client with Redux.",
+    "btnLabel": "Increase Redux counter"
 }
