--- a/modules/counter/client-react/reduxCounter/locales/ru/translations.json
+++ b/modules/counter/client-react/reduxCounter/locales/ru/translations.json
@@ -1,4 +1,4 @@
 {
-    "text": "Текущий redux счетчик, равен {{reduxCount}}. Он хранится на стороне клиента с помощью Redux.",
-    "btnLabel": "Нажмите, чтобы увеличить redux счетчик"
+    "text": "Текущий Redux счетчик равен {{reduxCount}}. Он хранится на стороне клиента с помощью Redux.",
+    "btnLabel": "Увеличить счетчик Redux"
 }
