--- a/modules/page-not-found/client-react/locales/ru/translations.json
+++ b/modules/page-not-found/client-react/locales/ru/translations.json
@@ -1,6 +1,6 @@
 {
   "title": "Страница не найдена",
-  "meta": "Пример Страница не найдена",
+  "meta": "Пример страницы Не найдено",
   "content": "Страница не найдена",
   "btnHome": "Вернуться на главную"
 }
