--- a/modules/pagination/client-react/locales/ru/translations.json
+++ b/modules/pagination/client-react/locales/ru/translations.json
@@ -4,7 +4,7 @@
     "title": {
       "standard": "Стандартная пагинация",
       "relay": "Порционная подгрузка данных",
-      "scroll": "Подгрузка данных по скроллу"
+      "scroll": "Подгрузка данных при прокрутке"
     },
     "btn": {
       "more": "Загрузить еще.."
