--- a/modules/payments/client-react/stripe/subscription/locales/en/translations.json
+++ b/modules/payments/client-react/stripe/subscription/locales/en/translations.json
@@ -4,28 +4,28 @@
   "loading": "loading...",
   "serverError": "Server error. Try again later.",
   "stripeError": "Payment service error. Try again later.",
-  "creditCardError": "The credit card data are invalid. Please enter valid data",
+  "creditCardError": "The credit card data is invalid. Please enter valid data.",
 
   "subscriptionProfile":{
-    "noSubscription": "You haven't subscribed.",
+    "noSubscription": "You haven't subscribed yet.",
     "title": "Subscription Info"
   },
 
   "creditCard": {
-    "title": "Credit Card Info",
+    "title": "Credit Card Data",
     "text": {
       "card": "card",
       "expires": "expires on"
     },
-    "name": "Name on Card",
+    "name": "Name on card",
     "info": "Payment Info"
   },
 
   "add": {
     "title": "Subscription",
     "btn": "Subscribe",
-    "description": "Apollo Universal Starter Kit comes with a basic example of Stripe subscription in a real web application. The starter kit also implements the functionality to imitate a real production payment service in the development mode.",
-    "product": "To get a magic private number, you need to subscribe.",
+    "description": "Apollo Universal Starter Kit provides a basic example of Stripe-based subscription. The starter kit also implements the payment functionality to imitate a real production payment service in development mode.",
+    "product": "To get a magic number, you need to subscribe.",
     "price": "Monthly subscription price: $",
     "creditCard": "Credit Card",
     "testCreditCards": "Test credit cards"
@@ -42,9 +42,9 @@
   },
 
   "update": {
-    "title": "Update Card Details",
+    "title": "Update Credit Card Details",
     "errorMsg": "Update failed!",
-    "subTitle": "Update Card Details",
+    "subTitle": "Update Credit Card Details",
     "btn": "Update card"
   }
 }
