--- a/modules/upload/server-ts/locales/en/translations.json
+++ b/modules/upload/server-ts/locales/en/translations.json
@@ -1,5 +1,5 @@
 {
   "fileNotFound": "File was not found.",
   "fileNotLoaded": "Unable to load file(s).",
-  "fileNotDeleted": "Unable to delete file."
+  "fileNotDeleted": "Unable to delete a file."
 }
