--- a/modules/upload/server-ts/locales/ru/translations.json
+++ b/modules/upload/server-ts/locales/ru/translations.json
@@ -1,5 +1,5 @@
 {
-  "fileNotFound": "Фаил не был найден.",
-  "fileNotLoaded": "Неудалось загрузить фаил(ы).",
-  "fileNotDeleted": "Наудалось удалить фаил."
+  "fileNotFound": "Файл не был найден.",
+  "fileNotLoaded": "Не удалось загрузить файл(ы).",
+  "fileNotDeleted": "Не удалось удалить файл."
 }
