--- a/modules/user/client-react/locales/en/translations.json
+++ b/modules/user/client-react/locales/en/translations.json
@@ -2,7 +2,7 @@
   "navLink": {
     "users": "Users",
     "signIn": "Sign In",
-    "logout": "Logout",
+    "logout": "Log out",
     "profile": "Profile",
     "editProfile": "Edit profile",
     "editUser": "Edit user",
@@ -12,26 +12,26 @@
   },
   "forgotPass": {
     "title": "Forgot password",
-    "meta": "Forgot password example page",
+    "meta": "A Forgot Password page example",
     "errorMsg": "Reset password failed!",
     "form": {
       "title": "Password Reset",
-      "submitMsg": "Reset password instructions have been emailed to you.",
+      "submitMsg": "Instructions for resetting your password were emailed to you.",
       "fldEmail": "Email",
-      "btnSubmit": "Send Reset Instructions"
+      "btnSubmit": "Send instructions"
     }
   },
 
   "login": {
     "title": "Login",
-    "meta": "Login example page",
+    "meta": "A Login page example",
     "errorMsg": "Login failed!",
     "cardTitle": "Available logins",
     "notRegText": "Not registered yet?",
-    "fbBtn": "Login with Facebook",
-    "googleBtn": "Login with Google",
-    "githubBtn": "Login with GitHub",
-    "linkedinBtn": "Login with LinkedIn",
+    "fbBtn": "Log in with Facebook",
+    "googleBtn": "Log in with Google",
+    "githubBtn": "Log in with GitHub",
+    "linkedinBtn": "Log in with LinkedIn",
     "form": {
       "title": "Sign In",
       "field": {
@@ -50,9 +50,9 @@
   "profile": {
     "title": "Profile",
     "headerText": "Profile info",
-    "meta": "Profile example page",
+    "meta": "A Profile page example",
     "loadMsg": "Loading...",
-    "errorMsg": "No current user logged in",
+    "errorMsg": "No current user is logged in",
     "editProfileText": "Edit Profile",
     "card": {
       "title": "Profile",
@@ -63,13 +63,13 @@
         "full": "Full Name"
       },
       "fldEmail": "Email",
-      "btnSubmit": "Send Reset Instructions"
+      "btnSubmit": "Send instructions"
     }
   },
 
   "reg": {
     "title": "Register",
-    "meta": "Register example page",
+    "meta": "A Registration page example",
     "errorMsg": "Registration failed!",
     "form": {
       "title": "Sign Up",
@@ -85,22 +85,22 @@
 
   "resetPass": {
     "title": "Reset password",
-    "meta": "Reset password example page",
-    "errorMsg": "Reset password failed!",
+    "meta": "A Reset Password page example",
+    "errorMsg": "Password reset failed!",
     "form": {
-      "title": "Reset password!",
+      "title": "Reset Password",
       "field": {
         "pass": "Password",
         "passConf": "Password Confirmation"
       },
-      "btnSubmit": "Reset Password"
+      "btnSubmit": "Reset password"
     }
   },
 
   "userEdit": {
     "title": "Edit User",
-    "meta": "Edit User example page",
-    "errorMsg": "Edit user failed!",
+    "meta": "An Edit User page example",
+    "errorMsg": "User editing failed!",
     "loadMsg": "Loading...",
     "form": {
       "title": "User",
@@ -132,7 +132,7 @@
 
   "users": {
     "title": "Users",
-    "meta": "Users example page",
+    "meta": "A User List page example",
     "loadMsg": "Loading...",
     "list": {
       "title": "Users",
@@ -173,11 +173,11 @@
     "login": {
       "usernameOrEmail": {
         "label": "Username or Email",
-        "placeholder": "Type Your Username or Email"
+        "placeholder": "Enter Your Username or Email"
       },
       "pass": {
         "label": "Password",
-        "placeholder": "Type Your Password"
+        "placeholder": "Enter Your Password"
       }
     },
     "logout": "Log out"
