--- a/modules/validation/common-react/locales/ru/translations.json
+++ b/modules/validation/common-react/locales/ru/translations.json
@@ -5,7 +5,7 @@
   "minLength": "Должно содержать болee {{ min }} символов",
   "number": "Дожно быть числом",
   "string": "Дожно быть строкой",
-  "minValue": "Должно содержать не менее {{ min }} символов",
+  "minValue": "Должно быть не менее {{ min }}",
   "email": "Некорректный адрес почты",
   "alphaNumeric": "Используйте только буквенно-цифровые символы",
   "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр"
