--- a/modules/counter/client-react/clientCounter/locales/en/translations.json
+++ b/modules/counter/client-react/clientCounter/locales/en/translations.json
@@ -1,4 +1,4 @@
 {
-    "text": "This counter value is {{amount}}. It's stored on the client with Apollo Link State.",
+    "text": "The current counter value is {{amount}}. It's stored on the client with Apollo Link State.",
     "btnLabel": "Increase Apollo Link State counter"
 }
