--- a/modules/counter/client-react/reduxCounter/locales/en/translations.json
+++ b/modules/counter/client-react/reduxCounter/locales/en/translations.json
@@ -1,4 +1,4 @@
 {
-    "text": "This counter value is {{reduxCount}}. It's stored on the client with Redux.",
+    "text": "The current counter value is {{reduxCount}}. It's stored on the client with Redux.",
     "btnLabel": "Increase Redux counter"
 }
