--- a/modules/validation/common-react/locales/ru/translations.json
+++ b/modules/validation/common-react/locales/ru/translations.json
@@ -8,5 +8,6 @@
   "minValue": "Должно содержать не менее {{ min }} символов",
   "email": "Некорректный адрес почты",
   "alphaNumeric": "Используйте только буквенно-цифровые символы",
-  "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр"
+  "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр",
+  "noSpaces": "Не должно содержать пробелов"
 }
