Add translations for download and loading

--- a/modules/reports/client-react/locales/en/translations.json
+++ b/modules/reports/client-react/locales/en/translations.json
@@ -7,5 +7,7 @@
       "server": "Report server"
     }
   },
-  "btn": "Print report"
+  "btn": "Print report",
+  "download": "Download report",
+  "loading": "Loading..."
 }
