--- a/modules/reports/client-react/locales/ru/translations.json
+++ b/modules/reports/client-react/locales/ru/translations.json
@@ -7,5 +7,7 @@
       "server": "Репорт с сервера"
     }
   },
-  "btn": "Распечатать репорт"
+  "btn": "Распечатать репорт",
+  "donwload": "Загрузить репорт",
+  "loading": "Загрузка..."
 }
