--- a/modules/validation/common-react/locales/ru/translations.json
+++ b/modules/validation/common-react/locales/ru/translations.json
@@ -8,6 +8,5 @@
   "minValue": "Должно быть не менее {{ min }}",
   "email": "Некорректный адрес почты",
   "alphaNumeric": "Используйте только буквенно-цифровые символы",
-  "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр",
-  "noSpaces": "Не должно содержать пробелов"
+  "phoneNumber": "Некорректный номер телефона. Номер должен содержать 10 цифр"
 }
