--- a/modules/user/server-ts/locales/en/translations.json
+++ b/modules/user/server-ts/locales/en/translations.json
@@ -3,10 +3,10 @@
   "usernameIsExisted": "Username already exists.",
   "emailIsExisted": "E-mail already exists.",
   "passwordLength": "Password must be {{length}} characters or more.",
-  "usernameIsExisted.": "Username already exists.",
   "userIsNotExisted": "User does not exist.",
   "userCannotDeleteYourself": "You can not delete your self.",
   "userCouldNotDeleted": "Could not delete user. Please try again later.",
+  "usernameInvalid": "Invalid username.",
   "auth": {
     "password": {
       "validPasswordEmail": "Please enter a valid username or e-mail.",
