--- a/modules/validation/common-react/locales/en/translations.json
+++ b/modules/validation/common-react/locales/en/translations.json
@@ -8,6 +8,5 @@
   "minValue": "Must be at least {{ min }}",
   "email": "Invalid email address",
   "alphaNumeric": "Only alphanumeric characters",
-  "phoneNumber": "Invalid phone number: It must consist of 10 digits",
-  "noSpaces": "Must not contain spaces"
+  "phoneNumber": "Invalid phone number: It must consist of 10 digits"
 }
