Add translations for each report format

--- a/modules/reports/client-react/locales/en/translations.json
+++ b/modules/reports/client-react/locales/en/translations.json
@@ -8,6 +8,7 @@
     }
   },
   "btn": "Print report",
-  "download": "Download report",
+  "downloadPDF": "Download PDF report",
+  "downloadExcel": "Download Excel report",
   "loading": "Loading..."
 }
