--- a/modules/reports/client-react/locales/ru/translations.json
+++ b/modules/reports/client-react/locales/ru/translations.json
@@ -8,6 +8,7 @@
     }
   },
   "btn": "Распечатать репорт",
-  "donwload": "Загрузить репорт",
+  "downloadPDF": "Загрузить отчет в PDF",
+  "downloadExcel": "Загрузить отчет в Excel",
   "loading": "Загрузка..."
 }
