Took contactFormSchema in contact-common

--- a/modules/contact/server-ts/locales/en/translation.json
+++ b/modules/contact/server-ts/locales/en/translation.json
@@ -1,4 +1,4 @@
 {
   "sendError": "Error when sending email.",
-  "validError": "Failed when check valid form contact"
+  "validateError": "Failed contact form validation"
 }
