--- a/modules/contact/server-ts/locales/ru/translation.json
+++ b/modules/contact/server-ts/locales/ru/translation.json
@@ -1,4 +1,4 @@
 {
   "sendError": "Ошибка при отправке письма.",
-  "validError": "Ошибка при проверки валидации формы"
+  "validateError": "Ошибка валидации формы"
 }
