Add translation and error handle

--- a/modules/reports/client-react/locales/en/translations.json
+++ b/modules/reports/client-react/locales/en/translations.json
@@ -1,12 +1,6 @@
 {
-  "navLink": "Reports",
-  "title": "Reports PDF",
-  "list": {
-    "title": {
-      "front": "Report front",
-      "server": "Report server"
-    }
-  },
+  "navLink": "Report",
+  "title": "Report",
   "btn": "Print report",
   "downloadPDF": "Download PDF report",
   "downloadExcel": "Download Excel report",
