--- a/modules/reports/client-react/locales/ru/translations.json
+++ b/modules/reports/client-react/locales/ru/translations.json
@@ -1,13 +1,7 @@
 {
-  "navLink": "Репорты",
-  "title": "Репорты в пдф",
-  "list": {
-    "title": {
-      "front": "Репорт с фронта",
-      "server": "Репорт с сервера"
-    }
-  },
-  "btn": "Распечатать репорт",
+  "navLink": "Отчет",
+  "title": "Отчет",
+  "btn": "Распечатать отчет",
   "downloadPDF": "Загрузить отчет в PDF",
   "downloadExcel": "Загрузить отчет в Excel",
   "loading": "Загрузка..."
