--- a/modules/contact/server-ts/locales/en/translation.json
+++ b/modules/contact/server-ts/locales/en/translation.json
@@ -1,3 +1,4 @@
 {
-  "sendError": "Error when sending email."
+  "sendError": "Error when sending email.",
+  "validateError": "Failed contact form validation"
 }
