--- a/modules/contact/server-ts/locales/ru/translation.json
+++ b/modules/contact/server-ts/locales/ru/translation.json
@@ -1,3 +1,4 @@
 {
-  "sendError": "Ошибка при отправке письма."
+  "sendError": "Ошибка при отправке письма.",
+  "validateError": "Ошибка валидации формы"
 }
