--- a/modules/reports/client-react/locales/ru/translations.json
+++ b/modules/reports/client-react/locales/ru/translations.json
@@ -1,8 +1,6 @@
 {
-  "navLink": "Отчет",
   "title": "Отчет",
-  "btn": "Распечатать отчет",
-  "downloadPDF": "Загрузить отчет в PDF",
-  "downloadExcel": "Загрузить отчет в Excel",
+  "navLink": "Отчет",
+  "meta": "Пример страницы со отчетом",
   "loading": "Загрузка..."
 }
