Implement SignIn via firebase and jwt access

--- a/modules/user/server-ts/locales/ru/translations.json
+++ b/modules/user/server-ts/locales/ru/translations.json
@@ -16,6 +16,7 @@
       "passwordsIsNotMatch": "Пароли не совпадают.",
       "passwordLength": "Длина пароля должна составлять {{length}} символов и больше.",
       "invalidToken": "Не действительный токен"
-    }
+    },
+    "tooManyRequests": "Слишком много неудачных попыток входа в систему. Попробуйте позже."
   }
 }
