--- a/modules/reports/client-react/pdf/client/locales/ru/translations.json
+++ b/modules/reports/client-react/pdf/client/locales/ru/translations.json
@@ -1,5 +1,5 @@
 {
   "title": "Отчет",
-  "print": "Распечатать отчет",
+  "print": "Распечатать отчет из компонента",
   "loading": "Загрузка..."
 }
