Create separete FirebaseLoginForm and FirebaseLoginView

--- a/modules/user/client-react/locales/en/translations.json
+++ b/modules/user/client-react/locales/en/translations.json
@@ -38,6 +38,10 @@
         "usernameOrEmail": "Username or Email",
         "pass": "Password"
       },
+      "firebase": {
+        "email": "Email",
+        "pass": "Password"
+      },
       "btnSubmit": "Login"
     },
     "btn": {
