--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -38,6 +38,10 @@
         "usernameOrEmail": "Имя пользователя или эл.почта",
         "pass": "Пароль"
       },
+      "firebase": {
+        "email": "Электронная почта",
+        "pass": "Пароль"
+      },
       "btnSubmit": "Войти"
     },
     "btn": {
