Mobile auth with email and pass

--- a/modules/firebase/client-react/locales/en/translations.json
+++ b/modules/firebase/client-react/locales/en/translations.json
@@ -178,9 +178,9 @@
     "nativeMock": "Hello, ",
     "mobile": {
       "login": {
-        "usernameOrEmail": {
-          "label": "Username or Email",
-          "placeholder": "Enter Your Username or Email"
+        "email": {
+          "label": "Email",
+          "placeholder": "Enter Email"
         },
         "pass": {
           "label": "Password",
