--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -82,6 +82,7 @@
     },
     "confirmationMsgTitle": "Подтвердите свой адрес электронной почты",
     "confirmationMsgBody": "Теперь нам нужно подтвердить ваш адрес электронной почты. Мы отправили вам электронное письмо. Пожалуйста, нажмите на ссылку в этом письме, чтобы продолжить.",
+    "confirmationBtn": "Вернуться на страница регистрации",
     "successRegTitle": "Адрес электронной почты был успешно подтвержден",
     "successRegBody": "Ваш адрес электронной почты был успешно подтвержден. Вы можете войти в приложение, используя свой логин и пароль."
   },
