fixed condition for permissions when deleting user; fixed test and added new ones.

--- a/packages/server-java/app/src/main/resources/i18n/messages.properties
+++ b/packages/server-java/app/src/main/resources/i18n/messages.properties
@@ -12,4 +12,4 @@ errors.userWithIdNotExists=User with id {0} does not exist.
 errors.userWithUsernameNotExists=User with username {0} does not exist.
 errors.userAlreadyExists=User already exists.
 errors.deleteUser.cannotDeleteYourself=You can not delete your self.
-errors.deleteUser.notEnoughPermission=You have not enough permission to delete users.
+errors.deleteUser.notEnoughPermission=You have not enough permissions to delete users.
