--- a/modules/user/client-react/locales/ru/translations.json
+++ b/modules/user/client-react/locales/ru/translations.json
@@ -2,7 +2,7 @@
   "loading": "Приложение загружается...",
   "navLink": {
     "users": "Пользователи",
-    "signIn": "Вход в систему",
+    "signIn": "Вход",
     "logout": "Выход",
     "profile": "Профиль",
     "editProfile": "Редактирование профиля",
